Changed products to png for easier bgcolor

--- a/css/queries.css
+++ b/css/queries.css
@@ -198,6 +198,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    height: 100vh;
   }
 
   /* 1st Section */
@@ -239,6 +240,20 @@
   .second-section img:hover {
     opacity: 1;
     transform: scale(1);
+  }
+
+  /* 3rd Section */
+  .third-section .products {
+    background-color: #fed105;
+    background-image: url(../imgs/collection-bg.png);
+    background-size: auto;
+    background-position: center;
+    background-repeat: repeat;
+    background-attachment: fixed;
+  }
+
+  .third-section .product-image {
+    background-color: #fed105;
   }
 
   .third-section-img {
